Refactor Collection Implementations in Tests: Drop Guava for Java Native