@@ -1,10 +1,12 @@
 package org.monarchinitiative.gregor.pedigree;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
 
 public class PedigreeQueryDecoratorTest {
 
@@ -13,13 +15,14 @@ public class PedigreeQueryDecoratorTest {
 
 	@BeforeEach
 	public void setUp() throws PedParseException {
-		ImmutableList.Builder<PedPerson> individuals = new ImmutableList.Builder<PedPerson>();
-		individuals.add(new PedPerson("fam", "father", "0", "0", Sex.MALE, Disease.UNAFFECTED));
-		individuals.add(new PedPerson("fam", "mother", "0", "0", Sex.FEMALE, Disease.UNKNOWN));
-		individuals.add(new PedPerson("fam", "son", "father", "mother", Sex.MALE, Disease.AFFECTED));
-		individuals.add(new PedPerson("fam", "daughter", "father", "mother", Sex.FEMALE, Disease.UNKNOWN));
-		PedFileContents pedFileContents = new PedFileContents(new ImmutableList.Builder<String>().build(),
-			individuals.build());
+		List<PedPerson> individuals = List.of(
+			new PedPerson("fam", "father", "0", "0", Sex.MALE, Disease.UNAFFECTED),
+			new PedPerson("fam", "mother", "0", "0", Sex.FEMALE, Disease.UNKNOWN),
+			new PedPerson("fam", "son", "father", "mother", Sex.MALE, Disease.AFFECTED),
+			new PedPerson("fam", "daughter", "father", "mother", Sex.FEMALE, Disease.UNKNOWN)
+			);
+		PedFileContents pedFileContents = new PedFileContents(List.of(),
+			individuals);
 
 		this.pedigree = new Pedigree(pedFileContents, "fam");
 		this.decorator = new PedigreeQueryDecorator(pedigree);
@@ -35,17 +38,17 @@ public class PedigreeQueryDecoratorTest {
 
 	@Test
 	public void testGetUnaffectedNames() {
-		Assertions.assertEquals(ImmutableSet.of("father"), decorator.getUnaffectedNames());
+		Assertions.assertEquals(Set.of("father"), decorator.getUnaffectedNames());
 	}
 
 	@Test
 	public void testGetParentNames() {
-		Assertions.assertEquals(ImmutableSet.of("father", "mother"), decorator.getParentNames());
+		Assertions.assertEquals(Set.of("father", "mother"), decorator.getParentNames());
 	}
 
 	@Test
 	public void testGetParents() {
-		Assertions.assertEquals(ImmutableList.of(pedigree.getMembers().get(0), pedigree.getMembers().get(1)), decorator.getParents());
+		Assertions.assertEquals(List.of(pedigree.getMembers().get(0), pedigree.getMembers().get(1)), decorator.getParents());
 	}
 
 	@Test
